@@ -1,7 +1,9 @@
 package io.mosip.kernel.biosdk.provider.impl;
 
+import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.EnumMap;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -34,19 +36,21 @@ import io.mosip.kernel.biosdk.provider.util.ProviderConstants;
 import io.mosip.kernel.core.bioapi.exception.BiometricException;
 
 @Component
+@SuppressWarnings({ "java:S101" })
 public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 
 	private static final Logger logger = BioSDKProviderLoggerFactory.getLogger(BioProviderImpl_V_0_9.class);
 
 	private static final String API_VERSION = "0.9";
-	private final Map<BiometricType, Map<BiometricFunction, IBioApi>> sdkRegistry = new HashMap<>();
+	private final Map<BiometricType, Map<BiometricFunction, IBioApi>> sdkRegistry = new EnumMap<>(BiometricType.class);
 
-	@Counted(value = "sdk.count", extraTags = {"api_version", API_VERSION})
-	@Timed(value = "sdk.time", extraTags = {"api_version", API_VERSION})
+	@Counted(value = "sdk.count", extraTags = { "api_version", API_VERSION })
+	@Timed(value = "sdk.time", extraTags = { "api_version", API_VERSION })
 	@Override
 	public Map<BiometricType, List<BiometricFunction>> init(Map<BiometricType, Map<String, String>> params)
 			throws BiometricException {
-		for (BiometricType modality : params.keySet()) {
+		for (Map.Entry<BiometricType, Map<String, String>> entry : params.entrySet()) {
+			BiometricType modality = entry.getKey();
 			Map<String, String> modalityParams = params.get(modality);
 
 			// check if version matches supported API version of this provider
@@ -67,11 +71,11 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 		return getSupportedModalities();
 	}
 
-	@Counted(value = "sdk.count", extraTags = {"api_version", API_VERSION})
-	@Timed(value = "sdk.time", extraTags = {"api_version", API_VERSION})
+	@Counted(value = "sdk.count", extraTags = { "api_version", API_VERSION })
+	@Timed(value = "sdk.time", extraTags = { "api_version", API_VERSION })
 	@Override
-	public boolean verify(List<BIR> sample, List<BIR> record, BiometricType modality, Map<String, String> flags) {
-		BiometricRecord galleryRecord = getBiometricRecord(record.toArray(new BIR[record.size()]));
+	public boolean verify(List<BIR> sample, List<BIR> bioRecords, BiometricType modality, Map<String, String> flags) {
+		BiometricRecord galleryRecord = getBiometricRecord(bioRecords.toArray(new BIR[bioRecords.size()]));
 		Response<MatchDecision[]> response = sdkRegistry.get(modality).get(BiometricFunction.MATCH).match(
 				getBiometricRecord(sample.toArray(new BIR[sample.size()])), new BiometricRecord[] { galleryRecord },
 				Arrays.asList(modality), flags);
@@ -80,8 +84,9 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 			Map<BiometricType, Decision> decisions = response.getResponse()[0].getDecisions();
 			if (decisions.containsKey(modality)) {
 				Match matchResult = decisions.get(modality).getMatch();
-				logger.info("AnalyticsInfo : {}, errors : {}", decisions.get(modality).getAnalyticsInfo(),
-						decisions.get(modality).getErrors());
+				logger.info(ProviderConstants.LOGGER_SESSIONID, ProviderConstants.LOGGER_IDTYPE, ProviderConstants.LOGGER_EMPTY,
+						MessageFormat.format("Verify::AnalyticsInfo : {0}, errors : {1}", decisions.get(modality).getAnalyticsInfo(),
+						decisions.get(modality).getErrors()));
 				return Match.MATCHED.equals(matchResult);
 			}
 		}
@@ -89,15 +94,16 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 		return false;
 	}
 
-	@Counted(value = "sdk.count", extraTags = {"api_version", API_VERSION})
-	@Timed(value = "sdk.time", extraTags = {"api_version", API_VERSION})
+	@Counted(value = "sdk.count", extraTags = { "api_version", API_VERSION })
+	@Timed(value = "sdk.time", extraTags = { "api_version", API_VERSION })
 	@Override
 	public Map<String, Boolean> identify(List<BIR> sample, Map<String, List<BIR>> gallery, BiometricType modality,
-										 Map<String, String> flags) {
+			Map<String, String> flags) {
 		Map<String, Integer> keyIndexMapping = new HashMap<>();
-		BiometricRecord galleryRecords[] = new BiometricRecord[gallery.size()];
+		BiometricRecord[] galleryRecords = new BiometricRecord[gallery.size()];
 		int i = 0;
-		for (String key : gallery.keySet()) {
+		for (Map.Entry<String,List<BIR>> entry : gallery.entrySet()) {
+		    String key = entry.getKey();
 			keyIndexMapping.put(key, i);
 			galleryRecords[i++] = getBiometricRecord(gallery.get(key).toArray(new BIR[gallery.get(key).size()]));
 		}
@@ -112,9 +118,10 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 				if (response.getResponse()[index].getDecisions().containsKey(modality)) {
 					result.put(key, Match.MATCHED
 							.equals(response.getResponse()[index].getDecisions().get(modality).getMatch()));
-					logger.info("AnalyticsInfo : {}, errors : {}",
+					logger.info(ProviderConstants.LOGGER_SESSIONID, ProviderConstants.LOGGER_IDTYPE, ProviderConstants.LOGGER_EMPTY,
+							MessageFormat.format("Identify::AnalyticsInfo : {0}, errors : {1}",
 							response.getResponse()[index].getDecisions().get(modality).getAnalyticsInfo(),
-							response.getResponse()[index].getDecisions().get(modality).getErrors());
+							response.getResponse()[index].getDecisions().get(modality).getErrors()));
 				} else
 					result.put(key, false);
 			});
@@ -122,30 +129,31 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 		return result;
 	}
 
-	@Counted(value = "sdk.count", extraTags = {"api_version", API_VERSION})
-	@Timed(value = "sdk.time", extraTags = {"api_version", API_VERSION})
+	@Counted(value = "sdk.count", extraTags = { "api_version", API_VERSION })
+	@Timed(value = "sdk.time", extraTags = { "api_version", API_VERSION })
 	@Override
 	public float[] getSegmentQuality(BIR[] sample, Map<String, String> flags) {
-		float scores[] = new float[sample.length];
+		float[] scores = new float[sample.length];
 		for (int i = 0; i < sample.length; i++) {
 			BiometricType modality = BiometricType.fromValue(sample[i].getBdbInfo().getType().get(0).value());
 			Response<QualityCheck> response = sdkRegistry.get(modality).get(BiometricFunction.QUALITY_CHECK)
 					.checkQuality(getBiometricRecord(sample[i]), Arrays.asList(modality), flags);
 
-			if (isSuccessResponse(response) && response.getResponse().getScores() != null &&
-					response.getResponse().getScores().containsKey(modality)) {
+			if (isSuccessResponse(response) && response.getResponse().getScores() != null
+					&& response.getResponse().getScores().containsKey(modality)) {
 				scores[i] = response.getResponse().getScores().get(modality).getScore();
-				logger.info("AnalyticsInfo : {}, errors : {}",
+				logger.info(ProviderConstants.LOGGER_SESSIONID, ProviderConstants.LOGGER_IDTYPE, ProviderConstants.LOGGER_EMPTY,
+						MessageFormat.format("SegmentQuality::AnalyticsInfo : {0}, errors : {1}",
 						response.getResponse().getScores().get(modality).getAnalyticsInfo(),
-						response.getResponse().getScores().get(modality).getErrors());
+						response.getResponse().getScores().get(modality).getErrors()));
 			} else
 				scores[i] = 0;
 		}
 		return scores;
 	}
 
-	@Counted(value = "sdk.count", extraTags = {"api_version", API_VERSION})
-	@Timed(value = "sdk.time", extraTags = {"api_version", API_VERSION})
+	@Counted(value = "sdk.count", extraTags = { "api_version", API_VERSION })
+	@Timed(value = "sdk.time", extraTags = { "api_version", API_VERSION })
 	@Override
 	public Map<BiometricType, Float> getModalityQuality(BIR[] sample, Map<String, String> flags) {
 		Set<BiometricType> modalitites = new HashSet<>();
@@ -153,22 +161,23 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 			modalitites.add(BiometricType.fromValue(sample[i].getBdbInfo().getType().get(0).value()));
 		}
 
-		Map<BiometricType, Float> scoreMap = new HashMap<>();
+		Map<BiometricType, Float> scoreMap = new EnumMap<>(BiometricType.class);
 		for (BiometricType modality : modalitites) {
 			Response<QualityCheck> response = sdkRegistry.get(modality).get(BiometricFunction.QUALITY_CHECK)
 					.checkQuality(getBiometricRecord(sample), Arrays.asList(modality), flags);
 
-			if (isSuccessResponse(response) && response.getResponse().getScores() != null &&
-					response.getResponse().getScores().containsKey(modality)) {
-				scoreMap.put(modality,response.getResponse().getScores().get(modality).getScore());
-				logger.info("AnalyticsInfo : {}, errors : {}",
+			if (isSuccessResponse(response) && response.getResponse().getScores() != null
+					&& response.getResponse().getScores().containsKey(modality)) {
+				scoreMap.put(modality, response.getResponse().getScores().get(modality).getScore());
+				logger.info("ModalityQuality::AnalyticsInfo : {}, errors : {}",
 						response.getResponse().getScores().get(modality).getAnalyticsInfo(),
 						response.getResponse().getScores().get(modality).getErrors());
+			} else {
+				scoreMap.put(modality, 0f);
 			}
-			else {	scoreMap.put(modality, 0f); }
 		}
 
-		float scores[] = new float[sample.length];
+		float[] scores = new float[sample.length];
 		for (int i = 0; i < sample.length; i++) {
 			BiometricType modality = BiometricType.fromValue(sample[i].getBdbInfo().getType().get(0).value());
 			if (scoreMap.containsKey(modality))
@@ -179,50 +188,42 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 		return scoreMap;
 	}
 
-	@Counted(value = "sdk.count", extraTags = {"api_version", API_VERSION})
-	@Timed(value = "sdk.time", extraTags = {"api_version", API_VERSION})
+	@Counted(value = "sdk.count", extraTags = { "api_version", API_VERSION })
+	@Timed(value = "sdk.time", extraTags = { "api_version", API_VERSION })
 	@Override
+	@SuppressWarnings({ "java:S1488" })
 	public List<BIR> extractTemplate(List<BIR> sample, Map<String, String> flags) {
-		Map<BiometricType, List<BIR>> birsByModality = sample.stream().collect(Collectors.groupingBy(bir -> BiometricType.fromValue(bir
-				.getBdbInfo()
-				.getType()
-				.get(0).value())));
+		Map<BiometricType, List<BIR>> birsByModality = sample.stream().collect(
+				Collectors.groupingBy(bir -> BiometricType.fromValue(bir.getBdbInfo().getType().get(0).value())));
 
-		List<BIR> templates = birsByModality.entrySet().stream()
-				.<BIR>flatMap(entry -> {
-					BiometricType modality = entry.getKey();
-					List<BIR> birsForModality = entry.getValue();
+		List<BIR> templates = birsByModality.entrySet().stream().<BIR>flatMap(entry -> {
+			BiometricType modality = entry.getKey();
+			List<BIR> birsForModality = entry.getValue();
 
-					BiometricRecord sampleRecord = getBiometricRecord(birsForModality.toArray(new BIR[birsForModality.size()]));
+			BiometricRecord sampleRecord = getBiometricRecord(birsForModality.toArray(new BIR[birsForModality.size()]));
 
-					Response<BiometricRecord> response = sdkRegistry
-							.get(modality)
-							.get(BiometricFunction.EXTRACT).extractTemplate(sampleRecord, List.of(modality), flags);
+			Response<BiometricRecord> response = sdkRegistry.get(modality).get(BiometricFunction.EXTRACT)
+					.extractTemplate(sampleRecord, List.of(modality), flags);
 
-					if(isSuccessResponse(response)) {
-						return response.getResponse().getSegments().stream();
-					}
+			if (isSuccessResponse(response)) {
+				return response.getResponse().getSegments().stream();
+			}
 
-					return Stream.empty();
-				})
-				.collect(Collectors.toList());
+			return Stream.empty();
+		}).toList();
 
 		return templates;
 	}
 
 	private boolean isSuccessResponse(Response<?> response) {
-		if (response != null && response.getStatusCode() >= 200 && response.getStatusCode() <= 299
-				&& response.getResponse() != null)
-			return true;
-		return false;
+		return (response != null && (response.getStatusCode() >= 200 && response.getStatusCode() <= 299)
+				&& response.getResponse() != null);
 	}
 
 	private void addToRegistry(SDKInfo sdkInfo, IBioApi iBioApi, BiometricType modality) {
 		for (BiometricFunction biometricFunction : sdkInfo.getSupportedMethods().keySet()) {
 			if (sdkInfo.getSupportedMethods().get(biometricFunction).contains(modality)) {
-				if (sdkRegistry.get(modality) == null)
-					sdkRegistry.put(modality, new HashMap<>());
-
+				sdkRegistry.computeIfAbsent(modality, k -> new EnumMap<>(BiometricFunction.class));
 				sdkRegistry.get(modality).put(biometricFunction, iBioApi);
 			}
 			logger.info("Successfully registered SDK : {}, BiometricFunction: {}",
@@ -231,28 +232,25 @@ public class BioProviderImpl_V_0_9 implements iBioProviderApi {
 	}
 
 	private Map<BiometricType, List<BiometricFunction>> getSupportedModalities() {
-		Map<BiometricType, List<BiometricFunction>> result = new HashMap<>();
+		Map<BiometricType, List<BiometricFunction>> result = new EnumMap<>(BiometricType.class);
 		sdkRegistry.forEach((modality, map) -> {
 			if (result.get(modality) == null)
-				result.put(modality, new ArrayList<BiometricFunction>());
+				result.put(modality, new ArrayList<>());
 
 			result.get(modality).addAll(map.keySet());
 		});
 		return result;
 	}
 
-	// TODO - set cebffversion and version in biometricRecord
 	private BiometricRecord getBiometricRecord(BIR[] birs) {
 		BiometricRecord biometricRecord = new BiometricRecord();
 		biometricRecord.setSegments(Arrays.asList(birs));
 		return biometricRecord;
 	}
 
-	// TODO - set cebffversion and version in biometricRecord
 	private BiometricRecord getBiometricRecord(BIR bir) {
 		BiometricRecord biometricRecord = new BiometricRecord();
 		biometricRecord.getSegments().add(bir);
 		return biometricRecord;
 	}
-
 }
